# FlowFM-Inspector

./: README.md  azure-pipelines.yml
app/: FlowFM-Inspector.sln  README.md
app/FlowFM-Inspector/: App.fs  CmdMapping.fs  FlowFM-Inspector.fsproj
app/FlowFM-Inspector.Infrastructure/: Core.fs  FlowFM-Inspector.Infrastructure.fsproj  Library.fs
app/FlowFM-Inspector.Infrastructure/Processes/: ChildProcess.fs  External.fs
app/FlowFM-Inspector.Presentation/: FlowFM-Inspector.Presentation.fsproj  Main.fs
app/FlowFM-Inspector.Presentation.Main/: FlowFM-Inspector.Presentation.Main.fsproj  Library.fs
app/FlowFM-Inspector.Presentation.Views/: FlowFM-Inspector.Presentation.Views.csproj  MainView.xaml  MainView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
app/FlowFM-Inspector.Presentation.Views/Themes/: Generic.xaml
core/: Dockerfile  README.md  pyproject.toml
core/flowfm-inspector/: pyproject.toml
core/flowfm-inspector/flowfm_inspector/: main.py  schema.py
core/flowfm_inspector/: basemodel.py  main.py  state.py
core/flowfm_inspector/internal/: appdata.py
core/flowfm_inspector/routers/: appdata.py
core/tests/: paths.py  test_flowfm_inspector.py
core/tests/internal/: test_appdata.py
core/tests/test-data/temp/: README.md
setup/: FlowFM-Inspector-setup.sln  README.md
setup/FlowFM-Inspector/: Directories.wxs  FlowFM-Inspector.wixproj  Product.wxs
setup/FlowFM-Inspector-setup/: FlowFM-Inspector-setup.sln
setup/FlowFM-Inspector-setup/FlowFM-Inspector/: FlowFM-Inspector.wixproj  Product.wxs
setup/FlowFM-Inspector/Components/: Core.wxs  app.executable.wxs  app.wxs  core.wxs  ui.wxs
setup/FlowFM-Inspector/Resources/: License.rtf
tools/: README.md  pyproject.toml
tools/tests/: test_components.py  test_directories.py
tools/tools/: common.py  components.py  directories.py  jinja_environment.py  main.py  persistence.py  tools.py
tools/tools/templates/: Component.wxs.jinja  Directories.wxs.jinja  Fragment.wxs.jinja
ui/: README.md  gatsby-config.js  package.json
ui/flowfm_inspector_gatsby/: gatsby-config.js  package-lock.json  package.json
(+25 files in other folders)
