[tool.poetry]
name = "flowfm-inspector"
version = "0.1.0"
description = ""
authors = ["BeardedPlatypus"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pydantic = "^1.8.2"
fastapi = {extras = ["all"], version = "^0.70.1"}
hydrolib-core = "^0.2.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.93.10"}
platformdirs = "^2.4.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
mypy = "^0.930"
pyinstaller = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
