[tool.poetry]
name = "flowfm-inspector"
version = "0.1.0"
description = ""
authors = ["tegelaer <maarten.tegelaers@deltares.nl>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
